istio-manifests/mtls-namespace.yaml
apiVersion: security.istio.io/v1beta1
kind: "PeerAuthentication"
metadata:
  name: namespace-policy
spec:
  mtls:
    mode: STRICT
