istio-manifests/destination-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: frontend
  namespace: frontend
spec:
  host: frontend.frontend.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL # ISTIO_MUTUAL  表示开启双向认证
